@@ -1,6 +1,7 @@
 #!/usr/bin/env bash
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright 2018-2024, Intel Corporation
+# Copyright 2025, Hewlett Packard Enterprise Development LP
 #
 #
 # pmempool_sync/TEST43 -- test for sync command with badblocks
@@ -11,6 +12,7 @@
 
 . ../unittest/unittest.sh
 
+require_real_pmem
 require_test_type medium
 require_fs_type non-pmem
 require_build_type debug nondebug
